--- a/src/p2-homeworks/h12/HW12.module.css
+++ b/src/p2-homeworks/h12/HW12.module.css
@@ -1,3 +1,25 @@
+hv
+
+select{
+    width: 90px;
+}
+.column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.defaultPlus {
+    font-size: 15px;
+    font-weight: 300;
+    width: 90px;
+    height: 40px;
+    background-color: black;
+    padding: 0;
+    margin: 0;
+
+}
+
 .dark {
     background: dimgrey;
 }
@@ -7,6 +29,7 @@
 }
 
 .red {
+
     background: lightcoral;
 }
 
